WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108870
Rationalize the use of iOS/Mac #defines in Assertions.cpp
https://bugs.webkit.org/show_bug.cgi?id=108870
Summary
Rationalize the use of iOS/Mac #defines in Assertions.cpp
Benjamin Poulain
Reported
2013-02-04 15:23:26 PST
Rationalize the use of iOS/Mac #defines in Assertions.cpp
Attachments
Patch
(2.33 KB, patch)
2013-02-04 15:29 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(2.34 KB, patch)
2013-02-04 16:58 PST
,
Benjamin Poulain
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Same patch
(2.34 KB, patch)
2013-02-04 23:31 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-02-04 15:29:48 PST
Created
attachment 186478
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2013-02-04 15:41:41 PST
Comment on
attachment 186478
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186478&action=review
r=me with USE(APPLE_SYSTEM_LOG) and considering whether we want USE(CF) && !PLATFORM(WIN).
> Source/WTF/wtf/Assertions.cpp:48 > -#if PLATFORM(MAC) > +#if USE(CF)
I believe this will compile on Windows as well. Do we know if we want that? If not: #if USE(CF) && !PLATFORM(WIN)
> Source/WTF/wtf/Assertions.cpp:51 > +#define USE_APPLE_SYSTEM_LOG
We should use this so we can use USE(APPLE_SYSTEM_LOG) later in the file: #define USE_APPLE_SYSTEM_LOG 1
> Source/WTF/wtf/Assertions.cpp:83 > -#if PLATFORM(MAC) > +#if USE(CF)
Ditto.
> Source/WTF/wtf/Assertions.cpp:100 > +#if defined(USE_APPLE_SYSTEM_LOG)
#if USE(APPLE_SYSTEM_LOG)
> Source/WTF/wtf/Assertions.cpp:111 > +#if defined(USE_APPLE_SYSTEM_LOG)
#if USE(APPLE_SYSTEM_LOG)
Benjamin Poulain
Comment 3
2013-02-04 16:58:21 PST
Created
attachment 186500
[details]
Patch
Build Bot
Comment 4
2013-02-04 20:34:11 PST
Comment on
attachment 186500
[details]
Patch
Attachment 186500
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16370493
Benjamin Poulain
Comment 5
2013-02-04 23:31:31 PST
Created
attachment 186556
[details]
Same patch Same patch for the Windows EWS. The bot looks drunk again given the previous results.
Benjamin Poulain
Comment 6
2013-02-05 12:59:51 PST
Comment on
attachment 186556
[details]
Same patch Clearing flags on attachment: 186556 Committed
r141919
: <
http://trac.webkit.org/changeset/141919
>
Benjamin Poulain
Comment 7
2013-02-05 12:59:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug