Rationalize the use of iOS/Mac #defines in Assertions.cpp https://bugs.webkit.org/show_bug.cgi?id=108870

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-02-05
Reviewed by David Kilzer.

* wtf/Assertions.cpp: Instead of using PLATFORM(MAC) and assume it works for iOS and OS X,
use CF as the guard for CFString. Similarily, USE_APPLE_SYSTEM_LOG guards code using ASL.


Canonical link: https://commits.webkit.org/127175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141919 268f45cc-cd09-0410-ab3c-d52691b4dbfc